dpkg (1.15.6) UNRELEASED; urgency=low

  [ Raphaël Hertzog ]
  * debian/control: add the accent on my first name

  [ Guillem Jover ]
  * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
    in a way consistent with the rest of the tools.
  * Recognize --help in addition to -h in dpkg-checkbuilddeps.

  [ Updated man page translations ]
  * Swedish (Peter Krefting).

  [ Updated scripts translations ]
  * Swedish (Peter Krefting).

 -- Raphaël Hertzog <hertzog@debian.org>  Tue, 17 Nov 2009 17:24:47 +0100

dpkg (1.15.5.2) unstable; urgency=low

  * Change Dpkg::Version API to accept invalid versions by default and add
    is_valid() method. The boolean evaluation of a version object returns
    true if the version is valid, false otherwise.
  * Update dpkg-shlibdeps to always use Dpkg::Version now that it can
    contain the empty version string. Closes: #556786
  * Keep compatibility with perl 5.8 by avoiding the _ prototype.

 -- Raphael Hertzog <hertzog@debian.org>  Wed, 18 Nov 2009 11:54:50 +0100

dpkg (1.15.5.1) unstable; urgency=low

  * Fix build failures due to off_t type missmatch caused by not including
    <config.h> first on the unit tests. Suggested by Pierre Habouzit and
    Julien Cristau, thanks!

 -- Guillem Jover <guillem@debian.org>  Tue, 17 Nov 2009 16:42:00 +0100

dpkg (1.15.5) unstable; urgency=low

  [ Guillem Jover ]
  * Remove obsolete conffiles on purge. Closes: #421367, #453005, #454628
  * Update list of binaries dpkg checks on the PATH.
    - Remove install-info, now a wrapper that will disappear soonish.
    - Add programs used by dpkg itself: sh, rm, find, tar and dpkg-deb.
  * Check and warn on duplicate conffiles in dpkg-deb. Closes: #131633
  * Make the upstream build system silent by default with automake 1.11 or
    newer, and always verbose when building the Debian packages.
  * Fix small leak when parsing ‘--ignore-depends’ option values.
  * Define compatibility WCOREDUMP only if the system does not have it.