@@ -33,6 +33,9 @@ Use the given build dependencies/conflicts instead of those contained in the
 .TP
 .BR \-h ", " \-\-help
 Show the usage message and exit.
+.TP
+.BR \-\-version
+Show the version and exit.
 .
 .SH AUTHOR
 Copyright \(co 2001 Joey Hess
