@@ -7,6 +7,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
     in a way consistent with the rest of the tools.
   * Recognize --help in addition to -h in dpkg-checkbuilddeps.
+  * Add a --version option to dpkg-checkbuilddeps.
 
   [ Updated man page translations ]
   * Swedish (Peter Krefting).
